api/infrastructure/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    monitoring: general
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      protocol: TCP
    - name: metrics
      port: 24231
      protocol: TCP
