api/infrastructure/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: api
              servicePort: 80
